force-app/main/default/objects/Partner_Badge__c/Partner_Badge__c.object-meta.xml
<CustomObject>
    <label>Partner Badge</label>
    <nameField>
        <label>Partner Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Badges</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>