force-app/main/default/objects/Partner_Badge__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether the badge is active for the partner.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>