force-app/main/default/objects/Partner_Badge__c/fields/Awarded_By_Process__c.field-meta.xml
<CustomField>
    <fullName>Awarded_By_Process__c</fullName>
    <description>Process or automation that awarded the badge.</description>
    <label>Awarded By Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>