force-app/main/default/objects/Partner_Badge__c/fields/Awarded_On__c.field-meta.xml
<CustomField>
    <fullName>Awarded_On__c</fullName>
    <description>Date when the badge was awarded.</description>
    <label>Awarded On</label>
    <type>Date</type>
</CustomField>