force-app/main/default/objects/Partner_Badge__c/fields/Badge_Code__c.field-meta.xml
<CustomField>
    <fullName>Badge_Code__c</fullName>
    <description>Unique code identifying the partner badge.</description>
    <label>Badge Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>