force-app/main/default/objects/Partner_Badge__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner account awarded the badge.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Partner_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>